--- a/app/assets/stylesheets/modules/map/_timeline.scss
+++ b/app/assets/stylesheets/modules/map/_timeline.scss
@@ -12,7 +12,7 @@
     }
     @media (min-width: $br-mobile){
       bottom: 44px;
-
+      min-width: 700px;
     }
 
     @media (min-width: $br-mobileMap){
@@ -61,8 +61,13 @@
     font-weight: 500;
     font-size: 12px;
     text-shadow: 0px 0px 3px #fff;
+
     @media (min-width: $br-mobileMap){
       display: block;
+    }
+
+    @media (min-width: $br-mobile) {
+      min-width: 700px;
     }
 
     span {
